--- a/index.html
+++ b/index.html
@@ -16,22 +16,33 @@
     </div>
 
     <div class="btns row">
-        <div class="card col-7 container">
+        <div class="card col-8 container">
             <div class="btn-group" role="group">
-                <button class="bot col-2" id="op1">Operation 1</button>
-                <button class="bot col-2" id="op2">Operation 2</button>
-                <button class="bot col-2" id="op3">Operation 3</button>
-                <button class="bot col-2" id="op4">Operation 4</button>
-                <button class="bot col-2" id="op5">Operation 5</button>
-                <button class="bot col-2" id="op6">Operation 6</button>
+                <button class="bot col-1.71" id="op1">Operation 01</button>
+                <button class="bot col-1.71" id="op2">Operation 02</button>
+                <button class="bot col-1.71" id="op3">Operation 03</button>
+                <button class="bot col-1.71" id="op4">Operation 04</button>
+                <button class="bot col-1.71" id="op5">Operation 05</button>
+                <button class="bot col-1.71" id="op6">Operation 06</button>
+                <button class="bot col-1.71" id="op7">Operation 07</button>
             </div>
             <div class="btn-group" role="group">
-                <button class="bot col-2" id="op7">Operation 7</button>
-                <button class="bot col-2" id="op8">Operation 8</button>
-                <button class="bot col-2" id="op9">Operation 9</button>
-                <button class="bot col-2" id="op10">Operation 10</button>
-                <button class="bot col-2" id="op11">Operation 11</button>
-                <button class="bot col-2" id="op12">Operation 12</button>
+                <button class="bot col-1.71" id="op8">Operation 08</button>
+                <button class="bot col-1.71" id="op9">Operation 09</button>
+                <button class="bot col-1.71" id="op10">Operation 10</button>
+                <button class="bot col-1.71" id="op11">Operation 11</button>
+                <button class="bot col-1.71" id="op12">Operation 12</button>
+                <button class="bot col-1.71" id="op13">Operation 13</button>
+                <button class="bot col-1.71" id="op14">Operation 14</button>
+            </div>
+            <div class="btn-group" role="group">
+                <button class="bot col-1.71" id="op15">Operation 15</button>
+                <button class="bot col-1.71" id="op16">Operation 16</button>
+                <button class="bot col-1.71" id="op17">Operation 17</button>
+                <button class="bot col-1.71" id="op18">Operation 18</button>
+                <button class="bot col-1.71" id="op19">Operation 19</button>
+                <button class="bot col-1.71" id="op20">Operation 20</button>
+                <button class="bot col-1.71" id="op21">Operation 21</button>
             </div>
         </div>
     </div>
@@ -155,6 +166,97 @@
             </div>
         </div>
     </div>
+
+    <div class="row" id="dop13" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 13</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" id="dop14" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 14</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" id="dop15" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 15</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" id="dop16" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 16</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" id="dop17" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 17</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" id="dop18" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 18</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" id="dop19" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 19</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" id="dop20" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 20</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" id="dop21" style="display: none;">
+        <div class="card col-4 container">
+            <img class="card-img-top" src="holder.js/100x180/" alt="">
+            <div class="card-body">
+                <h4 class="card-title">Operation 21</h4>
+                <p class="card-text">Text</p>
+            </div>
+        </div>
+    </div>
+
 
     <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
