Implementação do Dinheiro no Tempo

--- a/index.html
+++ b/index.html
@@ -473,30 +473,58 @@
 
     <div class="row col-12" id="dop16" style="display: none;">
         <div class="card col-6 container">
+            <h3>Valor Futuro (Dinheiro no Tempo)</h3>
             <div class="row">
                 <div class="card-body col-6">
-                    <h4 class="card-title ">Percentual</h4>
-                    <p class="card-text">Text</p>
+                    <div class="input-group"  style="margin-bottom: 20px">
+                        <input type="number" class="form-control" id="dinheiroNoTempoValorFuturoInput1" placeholder="Taxa de Juros:">
+                         <span class="input-group-prepend">
+                            <div class="input-group-text">%</div>
+                        </span>
+                    </div>
+                    <div class="input-group" style="margin-bottom: 20px;">
+                        <input type="number" class="form-control" id="dinheiroNoTempoValorFuturoInput2" placeholder="Períodos:">
+                    </div>
+                    <div class="input-group" style="margin-bottom: 20px;">
+                        <input type="number" class="form-control" id="dinheiroNoTempoValorFuturoInput3" placeholder="Valor Periódico:">
+                    </div>
+                    <div class="input-group">
+                        <input type="number" class="form-control" id="dinheiroNoTempoValorFuturoInput4" placeholder="Valor Presente">
+                    </div>
                 </div>
                 <div class="card-body col-6">
-                    <h4 class="card-title">Percentual</h4>
-                    <p class="card-text">Text</p>
-                </div>    
+                    <h4>Valor Futuro:</h4>
+                    <h5 id="resultado-dinheiro-tempo-valor-futuro"></h5>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="row col-12" id="dop17" style="display: none;">
         <div class="card col-6 container">
+            <h3>Valor Presente (Dinheiro no Tempo)</h3>
             <div class="row">
                 <div class="card-body col-6">
-                    <h4 class="card-title ">Percentual</h4>
-                    <p class="card-text">Text</p>
+                    <div class="input-group"  style="margin-bottom: 20px">
+                        <input type="number" class="form-control" id="dinheiroNoTempoValorPresenteInput1" placeholder="Taxa de Juros:">
+                         <span class="input-group-prepend">
+                            <div class="input-group-text">%</div>
+                        </span>
+                    </div>
+                    <div class="input-group" style="margin-bottom: 20px;">
+                        <input type="number" class="form-control" id="dinheiroNoTempoValorPresenteInput2" placeholder="Períodos:">
+                    </div>
+                    <div class="input-group" style="margin-bottom: 20px;">
+                        <input type="number" class="form-control" id="dinheiroNoTempoValorPresenteInput3" placeholder="Valor Periódico:">
+                    </div>
+                    <div class="input-group">
+                        <input type="number" class="form-control" id="dinheiroNoTempoValorPresenteInput4" placeholder="Valor Presente">
+                    </div>
                 </div>
                 <div class="card-body col-6">
-                    <h4 class="card-title">Percentual</h4>
-                    <p class="card-text">Text</p>
-                </div>    
+                    <h4>Valor Presente:</h4>
+                    <h5 id="resultado-dinheiro-tempo-valor-presente"></h5>
+                </div>
             </div>
         </div>
     </div>
